The css needed a quick fix, and the thankyou page has been wrapped up.

--- a/whatiswcs/static/whatiswcs/css/whatiswcs.css
+++ b/whatiswcs/static/whatiswcs/css/whatiswcs.css
@@ -1,4 +1,6 @@
-input,
+input[type=text],
+input[type=number],
+input[type=url],
 select,
 textarea{
     width: 100%;
